--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Gulp Fast
+title: Высотные работы в Москве и Московской области от &quot;Про-альпинизм&quot;
 ---
 
 {{> header }}
